<resources>
    <string name="app_name" translatable="false">UQACLife</string>
    <string name="session">Open a session</string>
    <string name="Mdp">Password</string>
    <string name="Captcha">Captcha</string>
    <string name="Valider">Done</string>
    <string name="Login_suite">Write your login </string>
    <string name="Mdp_suite">Write your password </string>
    <string name="J_attends_la_finalisation_du_captcha">J attends</string>
    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="preferences_file" translatable="false">com.uqacLifeTeam.uqacLife.PREFERENCE_FILE_KEY</string>
    <string name="save_password">Save password</string>
    <string name="styles">Styles</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="style_1">Default</string>
    <string name="style_2">Default</string>
    <string name="style_3">Default</string>
    <string name="error_calendar_message">An error occurred while loading calendar</string>
    <string name="error_login_credentials_1">An error occurred while logging in:</string>
    <string name="error_login_credentials_2">Invalid login and/or password</string>
    <string name="error_login_network_1">An error occurred while logging in:</string>
    <string name="error_login_network_2">Website unreachable</string>
    <string name="error_login_network_3">Check your internet connection or try again later</string>
    <string name="error_login_unknown_1">An unknown error occurred while logging in</string>
    <string name="error_login_unknown_2">Check your internet connection or try again later</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="blacklist">Blacklist</string>
    <string name="notification_button">Notif me sempai</string>
    <string name="groupe">Group</string>
    <string name="course_blacklisted">Course blacklisted</string>
    <string name="course_unblacklisted">Course unblacklisted</string>
    <string name="undo">Undo</string>
    <string name="blacklisted">Blacklisted</string>
    <string name="preferences">Preferences</string>
    <string name="grades">Grades</string>
    <string name="error_grades_message">An error occurred while loading grades</string>
    <string name="element">Element</string>
    <string name="non_pondere">Not weighted</string>
    <string name="pondere">Weighted</string>
    <string name="total">Total</string>
    <string name="search">Search</string>
    <string name="login_log_1">Getting login url and cookies...</string>
    <string name="login_log_2">Sending login information...</string>
    <string name="login_log_3">Retrieving encoded token...</string>
    <string name="login_log_4">Logging in...</string>
    <string name="login_log_5">Getting schedule...</string>
    <string name="login_log_6">Getting period id...</string>
    <string name="login_log_7">Retrieving course list...</string>
    <string name="login_log_8">Retrieving grades...</string>
    <string name="language_1" translatable="false">English</string>
    <string name="language_2" translatable="false">Français</string>
    <string name="language_3" translatable="false">Bosnian</string>
    <string name="language_4" translatable="false">Chinese</string>
    <string name="language_5" translatable="false">Deutsch</string>
    <string name="language_6" translatable="false">Greek</string>
    <string name="language_7" translatable="false">Finnish</string>
    <string name="language_8" translatable="false">Icelandic</string>
    <string name="language_9" translatable="false">Japanese</string>
    <string name="language_10" translatable="false">Javanese</string>
    <string name="language_11" translatable="false">Korean</string>
    <string name="language_12" translatable="false">Latin</string>
    <string name="language_13" translatable="false">Pashto</string>
    <string name="language_14" translatable="false">Polish</string>
    <string name="language_15" translatable="false">Russian</string>
    <string name="language_16" translatable="false">Spanish</string>
    <string name="language_17" translatable="false">Yoruba</string>
    <string name="language_18" translatable="false">Zulu</string>
    <string name="Switch_Notification">Enable</string>
    <string name="Switch_service">Permanent</string>
    <string name="about" translatable="false">About</string>
    <string name="about_description" translatable="false">"THE BEER-WARE LICENSE" (Revision 42):\n&lt;mahe.charpy@epita.fr&gt;, &lt;theo.golgevit@epita.fr&gt;, &lt;sebastien.januszczak@epita.fr&gt; &amp; &lt;jeremy.salfati@epita.fr&gt; wrote this android app.\nAs long as you retain this notice you can do whatever you want with this stuff.\nIf we meet some day, and you think this stuff is worth it, you can buy us a beer in return.\nMahé Charpy, Théo Golgevit, Sébastien Januszczak, Jérémy Salfati</string>
    <string name="avancedesnotification">Notification anticipation</string>
    <string name="avancedesnotification">Avance des notifications</string>
    <string name="about">About</string>
    <string name="about_description" translatable="false">/*\n
 * ----------------------------------------------------------------------------\n
 * "THE BEER-WARE LICENSE" (Revision 42):\n
 * &lt;mahe.charpy@epita.fr&gt; &lt;theo.golgevit@epita.fr&gt;\n
 * &lt;sebastien.januszczak@epita.fr&gt;  &amp; &lt;jeremy.salfati@epita.fr&gt;\n
 * wrote this android app. As long as you retain this notice you\n
 * can do whatever you want with this stuff. If we meet some day, and you think\n
 * this stuff is worth it, you can buy me a beer in return.   \n
 * Mahé Charpy, Théo Golgevit, Sébastien Januszczak, Jérémy Salfati\n
 * ----------------------------------------------------------------------------\n
 */</string>
    <string name="application_informations" translatable="false">Application informations</string>

</resources>
