<?xml version="1.0" encoding="utf-8"?>
<!--
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


</android.support.constraint.ConstraintLayout> -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Ecran_daccueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="217dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/uqaclife" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/session"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/login"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_edittext"
            android:hint="@string/Login_suite"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="15dip"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/Mdp"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_edittext"
            android:hint="@string/Mdp_suite"
            android:inputType="textPassword"
            android:nextFocusLeft="@+id/login"
            android:nextFocusRight="@+id/captcha"
            android:nextFocusUp="@+id/login"
            android:nextFocusDown="@+id/captcha"
            android:nextFocusForward="@+id/captcha"
            android:padding="15dip"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:checked="false"
            android:text="@string/save_password"
            android:textSize="26sp" />
<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/Captcha"
            android:textSize="26sp" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/container_captcha"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="10dip"
            android:contentDescription="@string/J_attends_la_finalisation_du_captcha"
            android:src="@drawable/blanc" />

        <EditText
            android:id="@+id/captcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_edittext"
            android:hint="@string/Captcha_suite"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:padding="15dip" />
            -->

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="15dip"
            android:background="@drawable/cours"
            android:backgroundTint="@"
            android:elevation="0dp"
            android:onClick="send"
            android:text="@string/Valider"
            android:textColor="#fff"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>
